<resources>
    <string name="app_name">Wildlife Trivia</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank  input fragment</string>
    <string name="welcome">Welcome!</string>
    <string name="sub">Ready yourself for some exciting wildlife questions to test your knowledge of our African heritage!</string>
    <string name="intro">Ready yourself for some exciting wildlife questions and riddles to test your knowledge of our African heritage.</string>
    <string name="play_game">Play</string>
    <string name="player_name">Player Name</string>
    <string name="categories">CATEGORIES</string>
    <string name="categories1">FAUNA</string>
    <string name="categories2">FLORA</string>
    <string name="categories3">FAUNA/FLORA</string>
    <string name="wildlife_icon">Wildlife Icon</string>
    <string name="enter_player_name">Enter Player Name Below</string>
    <string name="play_button_text">Play</string>
    <string name="name_hint">Name</string>
    <string name="animals">Animals</string>
    <string name="both">Both</string>
    <string name="plants">Plants</string>
    <string name="welcome_text">Welcome</string>
    <string name="question_text">Question</string>
    <string name="answer_hint">Answer</string>
    <string name="submit_button_text">Submit</string>
    <string name="answer_1">Answer 1</string>
    <string name="answer_2">Answer 2</string>
    <string name="answer_3">Answer 3</string>
    <string name="answer_4">Answer 4</string>
    <string name="score">score</string>
    <string name="your_summary">Your Summary</string>
    <string name="correct">Correct</string>
    <string name="user">User</string>
    <string name="home">Home</string>
    <string name="textview">TextView</string>
</resources>