<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".CategoriesFragment"
    android:background="@color/primary">

    <ImageView
        android:id="@+id/imageView"
        android:layout_width="100dp"
        android:layout_height="80dp"
        android:layout_gravity="top"
        android:layout_marginTop="32dp"
        android:src="@drawable/app_logo"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.498"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/welcomeName"
        android:contentDescription="@string/wildlife_icon" />

    <TextView
        android:id="@+id/textView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:text="@string/categories"
        android:textAlignment="center"
        android:textColor="@color/sandbrown"
        android:textSize="23sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/imageView"
        app:layout_constraintVertical_bias="0.037" />

    <Button
        android:id="@+id/category1"
        android:layout_width="150dp"
        android:layout_height="60dp"
        android:layout_marginTop="16dp"
        android:backgroundTint="@color/beige"
        android:fontFamily="@font/caveat"
        android:text="@string/categories1"
        android:textColor="@color/primary"
        android:textStyle="bold"
        android:typeface="normal"
        app:cornerRadius="20dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.498"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView"
        app:layout_constraintVertical_bias="0.067" />

    <Button
        android:id="@+id/category2"
        android:layout_width="150dp"
        android:layout_height="60dp"
        android:layout_marginTop="16dp"
        android:backgroundTint="@color/beige"
        android:fontFamily="@font/caveat"
        android:text="@string/categories2"
        android:textColor="@color/primary"
        android:textStyle="bold"
        android:typeface="normal"
        app:cornerRadius="20dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.498"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/category1"
        app:layout_constraintVertical_bias="0.087"
        app:rippleColor="@color/lightolive" />

    <Button
        android:id="@+id/category3"
        android:layout_width="150dp"
        android:layout_height="60dp"
        android:layout_marginTop="16dp"
        android:backgroundTint="@color/beige"
        android:fontFamily="@font/caveat"
        android:text="@string/categories3"
        android:textColor="@color/primary"
        android:textStyle="bold"
        android:typeface="normal"
        app:cornerRadius="20dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.498"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/category2"
        app:layout_constraintVertical_bias="0.100000024" />

    <TextView
        android:id="@+id/welcomeName"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="32dp"
        android:textColor="#FFFFFF"
        android:textSize="24sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>